🐳 docker-compose.yml: app サービスの設定を修正 (build context, ports, volumes)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,14 @@ version: "3.9"
 services:
   app:
     build:
-      context: app
+      context: ./app
       dockerfile: Dockerfile
     volumes:
-      - type: bind
-        source: ${LOCAL_WORKSPACE_FOLDER:-.}/app
-        target: /app
+      - .:/app
+      - /app/.next
     command: yarn dev
     ports:
-      - 3000:3000
+      - "3005:3000"
     environment:
       - DATABASE_URL=postgresql://user:password@db:5432/ecommerce_db
       - NEXT_PUBLIC_SUPABASE_URL=${NEXT_PUBLIC_SUPABASE_URL}
